# OsuRequest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  configure.py
.cache/clangd/index/: Client.cpp.4F148DF6BB9FE5C4.idx  Client.hpp.AE6DA5AC00EE16C7.idx  Logging.hpp.033A42A1DAC86FC5.idx  Template.cpp.775F47157E0B282D.idx  Template.cpp.D4C0BC7D72C91692.idx  backtracer-inl.h.C7F3A7D028769AD8.idx  backtracer.h.E1E084D56BA5E841.idx  circular_q.h.D7D2AFF02EF3BBBE.idx  common-inl.h.688A360BA13F81E7.idx  common.h.E6090727AB94CA69.idx  console_globals.h.6F8E23F5F5A705A2.idx  core.h.577C49889A9F942B.idx  core.h.D29BD8FB5DCF0742.idx  curl.h.A3F0DC0314E7AD29.idx  curl_config.h.FED6DCCE4349398A.idx  curl_easy.h.327EAFDDBFD2A878.idx  curl_easy_info.h.E5F6F680BF982D2E.idx  curl_exception.h.A331F952CDE4DD42.idx  curl_form.h.F495A9B78042A483.idx  curl_interface.h.B74FD61902C33404.idx  curl_ios.h.6D9BAC165B9C4BC5.idx  curl_pair.h.B21ACB5C5EA1F676.idx  curlver.h.746BA11A50A38E47.idx  easy.h.A37EC5AFF76E274F.idx  fmt.h.58037229F9953586.idx  fmt_helper.h.4965ADABD0F55ABB.idx  format.h.0106280BE2BFCF57.idx  format.h.72796A8AA16B2024.idx  formatter.h.CFDDBFE8E7F28F29.idx  log_msg-inl.h.512F04744AD2903B.idx  log_msg.h.9502F24F1A4E0E83.idx  log_msg_buffer-inl.h.A9626879ACA81D18.idx  log_msg_buffer.h.0DDCBB9F2E3125BE.idx  logger-inl.h.F9BA58B6954F80A2.idx  logger.h.29EB104652B7F9E0.idx  multi.h.7EEBCEAE8F0CA23A.idx  null_mutex.h.CCCF20709C4B589A.idx  options.h.7B152B51CE212081.idx  os-inl.h.EAE9C135925E475F.idx  os.h.9F827480F61F81DC.idx  (+18 more)
Include/: Logging.hpp
Include/KaedeRequest/: Beatmap.hpp  Request.hpp
Include/KaedeRequest/Api/: Beatconnect.hpp  Osu.hpp
Include/KaedeRequest/Core/: Client.hpp
Include/OsuRequest/: Beatmap.hpp  Request.hpp
Include/OsuRequest/Core/: Client.hpp
Source/: Beatmap.cpp
Source/Api/: Beatconnect.cpp  Osu.cpp
Source/Core/: Client.cpp
Source/Net/: Client.cpp
